--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -16,3 +16,11 @@ body {
 .list .item:hover {
     background-color: #242424;
 }
+
+.controls img {
+    filter: brightness(0) invert(1);
+}
+
+.controls img:hover {
+    filter: brightness(0) invert(0.90);
+}
