--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,6 +19,10 @@ body {
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.75);
 }
 
+.controls a {
+    margin-right: 10px;
+}
+
 
 .list .item {
     font-size: 24px;
@@ -70,6 +74,8 @@ button:hover {
     cursor: pointer;
     background-color: rgb(45, 81, 190);
 }
+
+
 
 
 
